# trip_advisor

./: .gitignore  .pre-commit-config.yaml  Makefile
.claude/: settings.json
backend/: ---SEPARATOR---  .env.example  Makefile  pyproject.toml
backend/config/: settings.py  urls.py
backend/routes/: models.py  urls.py  views.py
backend/routes/migrations/: 0001_initial.py
backend/trip/: models.py  urls.py  views.py
backend/trip/migrations/: 0001_initial.py  0002_bookmark.py  0003_day_group_names.py  0004_trip_map_camera.py  0005_trip_ui_state.py  0006_location_area_shape.py  0007_location_transit_role.py  0008_remove_null_from_charfields.py
frontend/: .env.local.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: TripSelector.tsx
frontend/src/components/layout/: ControlPanel.tsx  ControlPanels.tsx  MissionOverlay.tsx  NavModule.tsx  NodeMarkerModule.tsx  PropertiesModule.tsx  SearchModule.tsx  TimelineModule.tsx
frontend/src/components/layout/nav/: BudgetTab.tsx  LocationsTab.tsx  NavHeader.tsx  NavTabs.tsx  RoutesTab.tsx  constants.ts
frontend/src/components/map/: LocationMarker.tsx  MapPlaceholder.tsx  MapView.tsx  PoiPopup.tsx  mapConfig.ts  mapTypes.ts  mapUtils.ts  useGroupShapes.ts  useRoutePolylines.ts
frontend/src/components/ui/: FloatPanel.tsx
frontend/src/data/: itinerary.ts
frontend/src/hooks/: useTripPersistence.ts
frontend/src/lib/: utils.ts
frontend/src/store/: itinerary.ts  useTripStore.ts
(+15 files in other folders)
